# gorm

./: 10-gorm.rules  CHANGELOG.md  Cargo.toml  README.md  gorm.desktop
.github/workflows/: ci.yml
docs/: config.md
src/: config.rs  daemon.rs  dbus.rs  geometry.rs  main.rs  renderer.rs  text_field.rs  window.rs
src/wayland/: mod.rs
