[package]
name = "gorm"
version = "1.2.0"
description = "Mobile-optimized Linux WiFi settings"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/gorm"
rust-version = "1.88.0"
license = "GPL-3.0-only"
edition = "2024"

[dependencies]
calloop = { version = "0.14.3", features = ["executor"] }
calloop-wayland-source = "0.4.0"
configory = { version = "0.5.1", features = ["docgen", "log"] }
dashmap = "6.1.0"
futures-util = { version = "0.3.31", features = ["tokio-io"] }
gio = "0.21.2"
glib = "0.21.3"
glutin = { version = "0.32.1", default-features = false, features = ["egl", "wayland"] }
libc = "0.2.175"
librsvg = "2.60.0"
pangocairo = "0.21.2"
raw-window-handle = "0.6.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"
smithay-client-toolkit = { version = "0.20.0", default-features = false, features = ["xkbcommon"] }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wayland-backend = { version = "0.3.10", features = ["client_system"] }
zbus = { version = "5.9.0", default-features = false, features = ["tokio"] }

[build-dependencies]
gl_generator = "0.14.0"
